# CRAYON

./: .gitignore  LICENSE  MANIFEST.in  README.md  demo.py  load_and_go.py  pyproject.toml  setup.py  train_code_datasets.py  train_grad_full.py  train_hf_datasets.py  train_vocab.py  trained_vocab.json  trained_vocab.txt  verify_and_benchmark.py  verify_code_vocab.py  verify_string.py  vocab.json
.github/workflows/: build_wheels.yml
benchmarks/: micro_bench.py  run_benchmarks.py
src/crayon/: __init__.py  resources.py  training.py
src/crayon/adaptive/: __init__.py  manager.py  stability.py  updater.py
src/crayon/c_ext/: crayon_module.c  simd_ops.c  simd_ops.h  trie_node.h
src/crayon/concurrency/: __init__.py  pipeline.py  thread_local.py
src/crayon/core/: __init__.py  primitives.py  tokenizer.py  vocab_builder.py  vocabulary.py
src/crayon/memory/: __init__.py  cache.py  pool.py  zerocopy.py
src/crayon/resources/: physics_detailed_dataset_700_rows.csv
src/crayon/unicode/: __init__.py  multilingual.py  normalizer.py
tests/: __init__.py  test_c_ext.py  test_core.py  test_memory.py  test_throughput.py
