[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "xerv-crayon"
version = "1.1.0"
description = "Production-grade tokenizer achieving >2M tokens/s via AVX2 optimizations."
readme = "README.md"
requires-python = ">=3.12"
license = {file = "LICENSE"}
authors = [
  {name = "Soham Pal", email = "botmaker583@gmail.com"},
  {name = "Xerv Research Engineering Division"}
]
keywords = ["tokenizer", "nlp", "simd", "avx2", "high-performance", "zero-copy"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Text Processing :: Linguistic",
    "Operating System :: POSIX :: Linux",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS"
]

# Core dependencies (minimal for basic usage)
dependencies = []

# Optional dependencies for full functionality
[project.optional-dependencies]
full = [
    "requests>=2.31.0",
    "datasets>=2.18.0",
    "huggingface-hub>=0.21.0"
]
dev = [
    "pytest>=7.0.0",
    "pytest-benchmark>=4.0.0"
]

[project.urls]
Homepage = "https://github.com/xerv/crayon"
Repository = "https://github.com/xerv/crayon.git"
Documentation = "https://github.com/xerv/crayon#readme"
